--- a/808.복습/01.적용/복습.html
+++ b/808.복습/01.적용/복습.html
@@ -14,6 +14,7 @@
         <!-- 1. 상단영역 -->
         <div class="head_wrap">
             <div class="menu">
+                <a href=""><img src="../03.자료/mefa_logo_b.png" alt="로고"></a>
                 <a href="">메가스토리</a>
                 <a href="">메뉴소개</a>
                 <a href="">매장</a>
