--- a/002.CSS학습/01.Position/04.fixed.html
+++ b/002.CSS학습/01.Position/04.fixed.html
@@ -234,7 +234,7 @@
             background-color: lightblue;
             padding-left: 20px;
             /* 둥근모서리 : 왼쪽위, 왼쪽아래
-            boder-radius : 왼위 오른위 오른아래 왼아래
+            border-radius : 왼위 오른위 오른아래 왼아래
             왼쪽 위부터 시계방향! */
             border-radius: 20px 0 0 20px;
         }
