--- a/800.커마프로젝트/Robot_PJ/avengers.html
+++ b/800.커마프로젝트/Robot_PJ/avengers.html
@@ -2,14 +2,14 @@
 <html lang="ko">
     <head>
         <meta charset="UTF-8" />
-        <title>어벤저스 캐릭터 소개</title>
+        <title>범죄도시2 정보</title>
         <!-- 파비콘 : 탭메뉴 표시 아이콘 이미지 -->
         <link rel="shortcut icon" href="./ab_img/favicon.ico" />
         <link rel="stylesheet" href="./css/avengers.css" />
     </head>
     <body>
         <!-- 0. 전체 타이틀 -->
-        <h1 class="tit">Avengers</h1>
+        <h1 class="tit">TheRoundUp2</h1>
         <!-- 1-1. 캐릭터 소개 페이지 -->
         <div class="page" id="pg1">
             <!-- 2. 메인 캐릭터 박스 -->
@@ -20,10 +20,9 @@
                     <!-- 소개글 박스 -->
                     <article class="cd ltxt">
                         <div>
-                            <h2>아이언맨</h2>
+                            <h2>마석도</h2>
                             <p>
-                                천재적인 두뇌와 재능으로 세계 최강의 무기업체를 이끄는 CEO이자, 타고난 매력으로
-                                셀러브리티 못지않은 화려한 삶을 살아가던 억만장자 토니 스타크.
+                                누가 5야?
                             </p>
                         </div>
                     </article>
@@ -34,10 +33,9 @@
                     <!-- 소개글 박스 -->
                     <article class="cd rtxt">
                         <div>
-                            <h2>타노스</h2>
+                            <h2>강해상</h2>
                             <p>
-                                타노스는 토성의 위성인 타이탄에서 멘토(Mentor)와 수이-산(Sui-San) 부부의 사이에서
-                                태어났다.
+                                너 납치된거야.
                             </p>
                         </div>
                     </article>
@@ -48,10 +46,9 @@
                     <!-- 소개글 박스 -->
                     <article class="cd ltxt">
                         <div>
-                            <h2>토르</h2>
+                            <h2>전일만</h2>
                             <p>
-                                마블 시네마틱 유니버스(MCU)에 등장하는 슈퍼 히어로이다. 천둥의 신이자 아스가르드의
-                                왕족으로 날씨를 조종할 수 있으며 천둥과 번개를 사용할 수 있다.
+                                니가 가면 그게 수사야, 니가 소개팅 나가잖아? 그건 수사야!
                             </p>
                         </div>
                     </article>
@@ -62,11 +59,9 @@
                     <!-- 소개글 박스 -->
                     <article class="cd rtxt">
                         <div>
-                            <h2>닥터스트레인져</h2>
+                            <h2>장이수</h2>
                             <p>
-                                불의의 사고로 절망에 빠진 천재 외과의사 ‘닥터 스트레인지’. 마지막 희망을 걸고 찾아 간
-                                곳에서 ‘에인션트 원’을 만나 세상을 구원할 강력한 능력을 얻게 되면서, 모든 것을 초월한
-                                최강의 히어로로 거듭나는데...
+                                어 마형사
                             </p>
                         </div>
                     </article>
@@ -77,11 +72,9 @@
                     <!-- 소개글 박스 -->
                     <article class="cd rtxt">
                         <div>
-                            <h2>스타로드</h2>
+                            <h2>오동균</h2>
                             <p>
-                                일명 스타로드, 자칭 전설의 무법자. 하지만 대부분의 등장인물들은 금시초문이라는 반응을
-                                보이며, 그나마 몇 번 잡범으로 감방에 넣느라 면식이 있는 노바 경찰 데나리언 데이는 스타
-                                프린스라는 별명으로 부르는 등 썩 좋은 취급은 받지 못하고 있다.
+                                미안합니다 반장님...
                             </p>
                         </div>
                     </article>
@@ -92,11 +85,11 @@
         </div>
         <!-- 1-2. 예고편 동영상 페이지 -->
         <div class="page" id="pg2">
-            <h2 class="subtit">인피니티워 마블공식 예고편</h2>
+            <h2 class="subtit">범죄도시 2 예고편보기</h2>
             <div class="mvbx">
                 <iframe
-                    src="https://www.youtube.com/embed/-zabRKMQ88c"
-                    title="[어벤져스: 인피니티 워] 티저 예고편│마블 공식 예고편"
+                    src="https://www.youtube.com/embed/aw9j_23nORs"
+                    title="[범죄도시2'] 메인 예고편"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen
                 ></iframe>
@@ -110,7 +103,7 @@
             </div>
 
             <!-- 캐릭터 보기 이동버튼 -->
-            <a href="#pg1" class="gobtn">캐릭터 보기</a>
+            <a href="#pg1" class="gobtn">명대사 보기</a>
         </div>
     </body>
 </html>
