--- a/808.복습/01.적용/복습.html
+++ b/808.복습/01.적용/복습.html
@@ -10,7 +10,7 @@
         <source src="../03.자료/메가커피.mp4" type="video/mp4">
       </video>
       
-    <div class="cont">
+    <div class="cont pg1">
         <!-- 1. 상단영역 -->
         <div class="head_wrap">
             <div class="menu">
@@ -66,6 +66,15 @@
                 </ul>
             </div>
         </div>
+    </div>
+    <div class="cont pg2">
+        안녕하세요
+    </div>
+    <div class="cont pg3">
+        안녕하세요
+    </div>
+    <div class="cont pg4">
+        안녕하세요
     </div>
 
 </body>
