--- a/001.HTML학습/03.Robot_PJ/Robot.html
+++ b/001.HTML학습/03.Robot_PJ/Robot.html
@@ -6,6 +6,8 @@
     <link rel="shortcut icon" type="image/x-icon" href="./images/robot_03.png"/>
     <!-- 외부css -->
     <link rel="stylesheet" href="./css/Robot.css">
+    <!-- 애니메이션 css -->
+    <link rel="stylesheet" href="./css/robot_ani.css">
 </head>
 <body>
     <!-- 1. 상단영역 -->
@@ -35,6 +37,38 @@
                     <div class="ear er1 mt2"></div>
                     <!-- 오른귀 -->
                     <div class="ear er2 mt2"></div>
+                </div>
+
+                <!-- 로봇몸통 -->
+                <div class="body mt2">
+                    <!-- 목 -->
+                    <div class="neck mt2"></div>
+                    <!-- 왼팔 -->
+                    <div class="arm a1 mt2">
+                        <span></span>
+                    </div>
+                    <!-- 오른팔 -->
+                    <div class="arm a2 mt2">
+                        <span></span>
+                    </div>
+                    <!-- 왼다리 -->
+                    <div class="leg l1 mt2">
+                        <span></span>
+                    </div>
+                    <!-- 오른다리 -->
+                    <div class="leg l2 mt2">
+                        <span></span>
+                    </div>
+                    <!-- 왼어깨 -->
+                    <div class="shd s1 m1"></div>
+                    <!-- 오른어깨 -->
+                    <div class="shd s2 m1"></div>
+                    <!-- TV -->
+                    <div class="tv">
+                        <div class="screen">
+                            <!-- 유튭동영상 -->
+                        </div>
+                    </div>
                 </div>
 
             </section>
