--- a/700.쉐도잉프로젝트/01.DKB_PJ/02.구현소스/index.html
+++ b/700.쉐도잉프로젝트/01.DKB_PJ/02.구현소스/index.html
@@ -17,7 +17,60 @@
     <!-- 1. 상단영역 -->
     <div id="top">
         <header class="top ibx">
-
+            <!-- 1-1.로고 -->
+            <h1 class="logo">
+                <a href="index.html">
+                    <img src="./images/tvnlogo2.png" alt="tvN로고">
+                </a>
+            </h1>
+            <!-- 1-2.GNB메뉴 -->
+            <nav class="gnb">
+                <ul>
+                    <li>
+                        <a href="#">프로그램 소개</a>
+                    </li>
+                    <li>
+                        <a href="#">미리보기</a>
+                    </li>
+                    <li>
+                        <a href="#">동영상</a>
+                    </li>
+                    <li>
+                        <a href="#">사진첩</a>
+                    </li>
+                    <li>
+                        <a href="#">OST</a>
+                    </li>
+                    <li>
+                        <a href="#">시청자 게시판</a>
+                    </li>
+                </ul>
+            </nav>
+            <!-- 1-3.탑메뉴 -->
+            <!-- aside: div급의 "한쪽에 ...쓰는"블록박스 -->
+            <aside class="tmenu">
+                <ul>
+                    <li>
+                        <a href="#">로그인</a>
+                    </li>
+                    <li>
+                        <a href="#">회원가입</a>
+                    </li>
+                    <li>
+                        <ol class="sns">
+                            <li>
+                                <a href="#">트</a>
+                            </li>
+                            <li>
+                                <a href="#">인</a>
+                            </li>
+                            <li>
+                                <a href="#">페</a>
+                            </li>
+                        </ol>
+                    </li>
+                </ul>
+            </aside>
         </header>
     </div>
     <!-- 2. 메인영역 -->
