--- a/001.HTML학습/03.Robot_PJ/Robot.html
+++ b/001.HTML학습/03.Robot_PJ/Robot.html
@@ -45,28 +45,30 @@
                     <div class="neck mt2"></div>
                     <!-- 왼팔 -->
                     <div class="arm a1 mt2">
-                        <span></span>
+                        <span class="mt2"></span>
                     </div>
                     <!-- 오른팔 -->
                     <div class="arm a2 mt2">
-                        <span></span>
+                        <span class="mt2"></span>
                     </div>
                     <!-- 왼다리 -->
                     <div class="leg l1 mt2">
-                        <span></span>
+                        <span class="mt2"></span>
                     </div>
                     <!-- 오른다리 -->
                     <div class="leg l2 mt2">
-                        <span></span>
+                        <span class="mt2"></span>
                     </div>
                     <!-- 왼어깨 -->
-                    <div class="shd s1 m1"></div>
+                    <div class="shd s1 mt3"></div>
                     <!-- 오른어깨 -->
-                    <div class="shd s2 m1"></div>
+                    <div class="shd s2 mt3"></div>
                     <!-- TV -->
                     <div class="tv">
                         <div class="screen">
                             <!-- 유튭동영상 -->
+                            <iframe src="https://www.youtube.com/embed/xLD8oWRmlAE"></iframe>
+                            
                         </div>
                     </div>
                 </div>
