--- a/001.HTML학습/03.Robot_PJ/Robot.html
+++ b/001.HTML학습/03.Robot_PJ/Robot.html
@@ -149,6 +149,7 @@
         <div id="info">
             <footer class="info">
                 <!-- 회사정보 -->
+                Robotronics Inc.
             </footer>
         </div>
     </body>
