--- a/700.쉐도잉프로젝트/01.DKB_PJ/02.구현소스/index.html
+++ b/700.쉐도잉프로젝트/01.DKB_PJ/02.구현소스/index.html
@@ -26,17 +26,56 @@
             <!-- 1-2.GNB메뉴 -->
             <nav class="gnb">
                 <ul>
-                    <li>
+                    <li  class="sm">
                         <a href="#">프로그램 소개</a>
+                        <div class="smenu">
+                            <ol>
+                                <li>
+                                    <a href="#">프로그램 소개</a>
+                                </li>
+                                <li>
+                                    <a href="#">인물소개</a>
+                                </li>
+                                <li>
+                                    <a href="#">인물관계도</a>
+                                </li>
+                            </ol>
+                        </div>
                     </li>
                     <li>
                         <a href="#">미리보기</a>
                     </li>
-                    <li>
+                    <li class="sm">
                         <a href="#">동영상</a>
+                        <div class="smenu">
+                            <ol>
+                                <li>
+                                    <a href="#">클립영상</a>
+                                </li>
+                                <li>
+                                    <a href="#">다시보기</a>
+                                </li>
+                                <li>
+                                    <a href="#">예고편</a>
+                                </li>
+                                <li>
+                                    <a href="#">스페셜</a>
+                                </li>
+                            </ol>
+                        </div>
                     </li>
-                    <li>
+                    <li class="sm">
                         <a href="#">사진첩</a>
+                        <div class="smenu">
+                            <ol>
+                                <li>
+                                    <a href="#">현장 포토</a>
+                                </li>
+                                <li>
+                                    <a href="#">대표 포스터</a>
+                                </li>
+                            </ol>
+                        </div>
                     </li>
                     <li>
                         <a href="#">OST</a>
@@ -59,13 +98,25 @@
                     <li>
                         <ol class="sns">
                             <li>
-                                <a href="#">트</a>
+                                <a href="#">
+                                    <span class="ir">
+                                        트위터 바로가기
+                                    </span>
+                                </a>
                             </li>
                             <li>
-                                <a href="#">인</a>
+                                <a href="#">
+                                    <span class="ir">
+                                        인스타그램 바로가기
+                                    </span>
+                                </a>
                             </li>
                             <li>
-                                <a href="#">페</a>
+                                <a href="#">
+                                    <span class="ir">
+                                        페이스북 바로가기
+                                    </span>
+                                </a>
                             </li>
                         </ol>
                     </li>
