--- a/700.쉐도잉프로젝트/01.DKB_PJ/02.구현소스/index.html
+++ b/700.쉐도잉프로젝트/01.DKB_PJ/02.구현소스/index.html
@@ -67,7 +67,7 @@
                         <li class="sm">
                             <a href="#">프로그램 소개</a>
                             <!-- 서브메뉴박스 -->
-                            <dlv class="smbx">
+                            <div class="smbx">
                                 <ol class="smenu">
                                     <li>
                                         <a href="#">프로그램 소개</a>
@@ -79,7 +79,7 @@
                                         <a href="#">인물관계도</a>
                                     </li>
                                 </ol>
-                            </dlv>
+                            </div>
                         </li>
                         <li>
                             <a href="#">미리보기</a>
