--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>아카이브 페이지</title>
     <link rel="stylesheet" href="./ZCSS/main.css">
 </head>
@@ -18,7 +19,7 @@
             <nav class="gnb">
                 <ul>
                     <li>
-                        <a href="#pg1">1페이지</a>
+                        <a href="#pg1">공통개별 PJ</a>
                         <!-- a요소의 href에 '#아이디명'은 같은 페이지내의 아이디 요소 위치로 이동함 -->
                     </li>
                     <li>
@@ -41,29 +42,32 @@
         <div class="pwrap">
             <!-- 1. html학습 링크파트 -->
             <section class="part pt1">
+                <!-- 타이틀 -->
+                <h2>공통 프로젝트</h2>
                 <ol>
                     <li>
                         <a href="./001.HTML학습/01.info_PJ/index.html" target="_blank">Info PJ</a>
                     </li>
                     <li>
-                        <a href="./001.HTML학습/01.info_PJ/sub4.html" target="_blank">IT/과학 페이지</a>
+                        <a href="./001.HTML학습/03.Robot_PJ/avengers.html" target="_blank">Avengers PJ</a>
                     </li>
                     <li>
-                        <a href="./006.와이어프레이밍/도깨비PJ와이어프레임.pdf" target="_blank">도깨비 PJ 와이어프레이밍</a>
+                        <a href="./001.HTML학습/03.Robot_PJ/Robot.html" target="_blank">Robot PJ</a>
+                    </li>
+                    <li>
+                        <a href="./001.HTML학습/04.Transform_PJ/index.html" target="_blank">Transform PJ</a>
+                    </li>
+                    <li>
+                        <a href="./001.HTML학습/06.CGV_PJ/003.구현소스/index.html" target="_blank">CGV PJ</a>
                     </li>
                 </ol>
             </section>
-            <!-- 2. CSS학습 링크파트 -->
+            <!-- 2. 개별프로젝트 링크파트 -->
             <section class="part pt2">
+                <h2>개별 프로젝트</h2>
                 <ol>
                     <li>
-                        <a href="./001.HTML학습/01.info_PJ/index.html" target="_blank">Info PJ</a>
-                    </li>
-                    <li>
-                        <a href="./001.HTML학습/01.info_PJ/sub4.html" target="_blank">IT/과학 페이지</a>
-                    </li>
-                    <li>
-                        <a href="./006.와이어프레이밍/도깨비PJ와이어프레임.pdf" target="_blank">도깨비 PJ 와이어프레이밍</a>
+                        <a href="./800.커마프로젝트/Robot_PJ/avengers.html" target="_blank">TheRoundUp2 PJ</a>
                     </li>
                 </ol>
             </section>
@@ -92,12 +96,6 @@
                 <ol>
                     <li>
                         <a href="./001.HTML학습/01.info_PJ/index.html" target="_blank">Info PJ</a>
-                    </li>
-                    <li>
-                        <a href="./001.HTML학습/01.info_PJ/sub4.html" target="_blank">IT/과학 페이지</a>
-                    </li>
-                    <li>
-                        <a href="./006.와이어프레이밍/도깨비PJ와이어프레임.pdf" target="_blank">도깨비 PJ 와이어프레이밍</a>
                     </li>
                 </ol>
             </section>
