--- a/001.HTML학습/06.CGV_PJ/003.구현소스/index.html
+++ b/001.HTML학습/06.CGV_PJ/003.구현소스/index.html
@@ -41,7 +41,7 @@
     <!-- <script src="JS외부파일.js"></script> -->
 </head>
 <body>
-    <!-- 1.상단영역 -->
+    <!------------------------------------ 1.상단영역 ------------------------------------>
     <div id="top">
         <header class="top ibx">
             <!-- 1-1.로고 -->
@@ -50,7 +50,7 @@
             </h1>
         </header>
     </div>
-    <!-- 2.메인영역 -->
+    <!------------------------------------ 2.메인영역 ------------------------------------>
     <div id="cont">
         <main class="cont ibx">
             <!-- 2-1. 스크린 -->
@@ -182,7 +182,7 @@
         </main>
     </div>
 
-    <!-- 3.하단영역 -->
+    <!---------------------------------------------- 3.하단영역 ---------------------------------------------->
     <div id="info">
         <footer class="info ibx">
 
