--- a/002.CSS학습/05.3DAni/OpenDoor.html
+++ b/002.CSS학습/05.3DAni/OpenDoor.html
@@ -9,17 +9,25 @@
 <body>
     <!-- 전체 타이틀 -->
     <h1 class="tit">
-        Open Door
+        <span>
+            Open Door
+        </span>
     </h1>
 
     <!-- 전체문부모 -->
-    <div class="cont">
-        <!-- 문프레임 -->
-        <div class="frame">
-            <!-- 문짝 -->
-            <div class="door">
-                <!-- 손잡이 -->
-                <div class="handle"></div>
+    <div class="wrap">
+        <div class="cont">
+            <!-- 문프레임 -->
+            <div class="frame">
+                <!-- 문짝 -->
+                <div class="door">
+                    <!-- 손잡이 -->
+                    <div class="handle"></div>
+                </div>
+                <!-- 엘사 -->
+                <div id="elsa">
+                    <img src="./images/elsa.png" alt="엘사">
+                </div>
             </div>
         </div>
     </div>
