--- a/ㅇㅇ.html
+++ b/ㅇㅇ.html
@@ -17,8 +17,15 @@
       goal.style.backgroundColor = "gray";
 
     }
+    var Gae = "hello";
+    document.write (`
+      안녕하세요는 영어로 ${Gae}입니다
+    `);
   </script>
   <style>
+    body{
+      font-size: 2vw;
+    }
     .box .hi{
       position: absolute;
       top: 50%;
