--- a/700.쉐도잉프로젝트/01.DKB_PJ/02.구현소스/index.html
+++ b/700.쉐도잉프로젝트/01.DKB_PJ/02.구현소스/index.html
@@ -15,6 +15,8 @@
         <title>도깨비PJ - 메인페이지</title>
         <!-- 외부css불러오기(main.css만) -->
         <link rel="stylesheet" href="./css/main.css" />
+        <!-- 미디어쿼리 불러오기 : 메인 아래 있어야함-->
+        <link rel="stylesheet" href="./css/media.css">
     </head>
     <body>
         <!-- 1. 상단영역 -->
