--- a/004.JS학습/JS2-1.변수와연산자.html
+++ b/004.JS학습/JS2-1.변수와연산자.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <title>JS2-1. 변수(Variable)와 연산자(Operator)</title>
         <script>
-            /*********************************************** 
+        /*********************************************** 
             [ JS의 변수란? ]
         _________________________________________________
         
@@ -254,7 +254,10 @@
               앞수%뒷수 -> 앞수에서 뒷수를 나눈 나머지
               예) 숫자%2 -> 2로 나눈 나머지가 0이면 짝수
           ************************************************/
-
+            document.write(`
+                2. 나머지 연산자 : <br>
+                ${H} % ${G} = ${H%G}
+            `);
             /************************************************ 
                3. 비교연산자:
                - 두 가지 값을 비교하여 
