--- a/004.JS학습/JS3-1.제어문.html
+++ b/004.JS학습/JS3-1.제어문.html
@@ -18,7 +18,7 @@
                 // 어떤값을 가져오거나 가지고 나갈 수 있음!
 
                 // 1. 함수를 만들고 처음할 일은? 호출확인!
-                console.log("점수요~~!");
+                // console.log("점수요~~!");
 
                 // 2. 대상선정 ///////////////////////
                 // 2-1. 점수입력요소 : input#jumsu
@@ -28,6 +28,9 @@
                 // 2-2. 출력요소 : #jexp
                 var jexp = document.querySelector("#jexp");
                 // quearySelector(CSS선택자)
+
+                // 2-3. 칭찬스티커 : #jshow
+                var jshow = document.querySelector("#jshow");
 
                 // 3. 입력값 읽어오기 //////////////
                 var score = jumsu.value;
@@ -39,12 +42,94 @@
                 // 아래 if문에서 숫자와 비교할 때 데이터형은 문자형이어도 내용이 숫자이면 브라우저에서 자동변환하여 처리함!
                 // 예전엔 Number(문자형숫자)로 변환했었음
 
+                /************************************** 
+                    함수명: initFn
+                    기능: 초기화 및 메시지 출력
+                **************************************/
+                var initFn = function(txt){
+
+                    // txt는 메시지를 전달하는 파라미터변수임
+
+                    // 0. 함수호출
+                    console.log("초기화해야지~!!");
+
+                    // 1. 평가출력에 내용 출력하기
+                    jexp.innerText = txt;
+
+                    // 2. 글자색 초기화 : jexp
+                    jexp.style.color = "#000";
+                    
+                    // 3. 칭찬스티커 초기화 : jshow
+                    jshow.style.backgroundPosition = "322px 0";
+
+                    // 4. 입력창 내용 지우기 : jumsu
+                    jumsu.value = "";
+                    // value 속성에 빈문자값을 넣으면 기존내용 지워짐
+
+                    // 5. 입력창에 포커스주기 : jumsu
+                    jumsu.focus();
+                    // focus() 내장함수는 입력창에 포커스를 준다!
+
+                }; //////////// initFn 함수 ///////////////
+
+                // 변수에 이름없는 함수(익명함수)를 담으면 
+                // 그 변수는 함수가 된다!!
+                // 함수의 사용목적은 명령어 코드를 바로 실행하지 않고 저장해 놓는 어떤 시점에 실행하기 위함이다!
+
+                // 익명함수는 이름이 없는 폼이다! function(){코드}
+
+
+                /*************************************** 
+                    [숫자여부 판별]  
+                    -> ish Not a Number? -> isNaN()
+                    -> 숫자가 아니니? 판별 내장함수는?
+                    isNaN(변수)
+                    -> 숫자가 아니면 true, 숫자면 false
+                    -> 데이터형이 string(문자)여도 내용이 숫자이면 숫자로 판별한다
+                ***************************************/
+
+               // 입력된 값(score) 숫자여부판별
+               console.log("숫자가 아니니?", isNaN(score));
+
+                // 빈값 체크 if문////
+                if(score===""){
+                    // 초기화함수 호출!
+                    initFn("내용을 입력해주세요!");
+                    // 함수빠져나가기!
+                    return;
+                }///// if /////
+
+               else if(isNaN(score)){
+                    // alert("숫자가 아니니 돌아가!");
+
+                    // 초기화함수 호출!
+                    initFn("숫자만 입력해주세요!");
+
+                    // 함수에서 아래쪽 코드가 실행되지 않도록 함수를 여기에서 빠져나가게 하는 방법은?
+                    // return 키워드를 사용한다!!
+                    // 리턴은 함수에서 어떤 값을 함수를 호출한 곳으로 가져가거나 함수를 끝낼 때 사용한다!
+                    // return 어떤 값 -> 리턴뒤에 값을 안쓸 수 있음
+                    return;
+               }/////////// else if ///////////////
+
+               /////// 숫자 범위가 0미만 100초과일 경우 메시지
+               else if(score < 0 || score >100){
+                    // 초기화함수 호출
+                    initFn("0이상 100이하의 숫자만 입력해주세요")
+                    // 함수빠져나가기
+                    return;
+               }//////////else if////////////
+
+
                 // 변수만들기//////
                 // 메시지변수
                 var msg;
 
                 // 글자색변수
                 var fc;
+
+                // 배경위치변수
+                var bgp;
 
                 // 4. 메시지 만들기 /////////////////////
                 // 점수에 따른 메시지를 if문으로 작성한다!
@@ -60,21 +145,26 @@
                 if (score >= 90) {
                     msg = "매우잘함";
                     fc = "blue";
+                    bgp = "0 0 ";
                 } else if (score >= 80) {
                     msg = "잘함";
                     fc = "green";
+                    bgp = "-322px 0 ";
                 } else if (score >= 70) {
                     msg = "보통";
                     fc = "purple";
+                    bgp = "-322px -322px ";
                 } else if (score >= 60) {
                     msg = "노력요함";
                     fc = "orange";
+                    bgp = "0 -644px ";
                 } else {
                     msg = "재시험";
                     fc = "red";
+                    bgp = "-644px -644px ";
                 }
 
-                console.log("글자색: ",fc);
+                console.log("글자색: ",fc,"\n배경위치 :",bgp);
 
                 // else문을 끝에 사용할 경우 위의 조건에 모두 맞지 않으면 처리하게 됨
                 // else문 때문에 msg는 반드시 할당값을 가지게 됨!
@@ -107,6 +197,10 @@
                 // 6. 글자색 변경 :
                 jexp.style.color = fc;
                 // fc는 점수대별 글자색을 할당한 변수
+
+                // 7. 칭찬스티커 배경위치변경 : #jshow -jshow변수
+                jshow.style.backgroundPosition = bgp;
+                // bgp는 배경이미지 위치값을 할당한 변수
 
             } //////////////////////jumsu 함수///////////////////////
             /******************************************************* 
@@ -149,6 +243,30 @@
                 if(aa>10) my = "ㅎㅎㅎ";
        *******************************************************/
         </script>
+        <style>
+            /* 칭찬스티커 */
+            #jshow{
+                position: absolute;
+                top: -12px;
+                left: 131px;
+                width: 322px;
+                height: 322px;
+                background: url(./images/ifshow.jpg) no-repeat;
+                /* 배경이미지 포지션으로 이미지변경하기
+                -> 처음에 안보이게함! */
+                background-position: 322px 0;
+                transform: scale(0.3);
+                /* 트랜지션 : 속시이지 */
+                transition: all .4s ease-out;
+            }
+            /* IR(배경이미지 설명 숨기기) */
+            .ir{
+                display: block;
+                width: 0;
+                height: 0;  
+                overflow: hidden;
+            }
+        </style>
     </head>
     <body>
         <h1>JS 제어문</h1>
@@ -157,7 +275,19 @@
         <h2>if문 연습</h2>
         <h3 id="jexp">평가출력</h3>
         <label for="jumsu">점수입력:</label>
-        <input type="text" id="jumsu" placeholder="점수를 입력하세요!" maxlength="3" />
+        <input type="text" id="jumsu" placeholder="점수를 입력하세요!" maxlength="3" onkeypress="if(event.keyCode===13){jumsu()}" />
+        <!-- 
+            [  onkeypress 이벤트 속성  ]
+            -> 키보드를 치면 발생하는 이벤트 속성 if조건문
+            조건식: event.keyCode === 13
+            -> 키보드의 키코드가 13이냐? 엔터키 눌렀냐?
+            -> 엔터키의 키코드는 13번이다!
+            -> true이면 jumsu()라는 함수를 호출해라!
+            
+            참고 : https://www.w3schools.com/charsets/ref_html_ascii.asp
+         -->
+
+
         <!-- 버튼클릭 시 클릭이벤트 속성과 미리만든 함수를 연결한다! -->
         <button class="sbtn" onclick="jumsu()">평가하기</button>
 
@@ -171,5 +301,11 @@
         - placeholder -> 안내문구출력
         - maxlength -> 최대입력 글자 수 제한
      -->
+
+    <!-- 칭찬스티커 -->
+    <div id="jshow">
+        <span class="ir">칭찬스티커</span>
+    </div>
+
     </body>
 </html>
