--- a/002.CSS학습/017.비율유지박스.html
+++ b/002.CSS학습/017.비율유지박스.html
@@ -133,6 +133,7 @@
 
             /* 5. 비율유지박스 : aspect-ratio 속성사용 */
             .arbx{
+                position: relative;
                 aspect-ratio: 16/9;
                 /* 
                     [  aspect-ratio 속성 사용하기  ]
