--- a/700.쉐도잉프로젝트/01.DKB_PJ/02.구현소스/index.html
+++ b/700.쉐도잉프로젝트/01.DKB_PJ/02.구현소스/index.html
@@ -19,6 +19,9 @@
         <link rel="stylesheet" href="./css/main.css" />
         <!-- 미디어쿼리 불러오기 : 메인 아래 있어야함-->
         <link rel="stylesheet" href="./css/media.css">
+        <!-- 외부JS 불러오기 -->
+        <script src="./js/common.js" defer></script>
+        <!-- defer 는 html코드를 모두 로딩후 실행하는 속성임 -->
     </head>
     <body>
         <!-- 1. 상단영역 -->
@@ -131,7 +134,7 @@
                     </ul>
                 </nav>
                 <!-- 모바일 햄버거버튼 -->
-                <button class="ham">≡</button>
+                <button class="ham"></button>
             </header>
         </div>
         <!-- 2. 메인영역 -->
