--- a/004.JS학습/JS3-1.제어문.html
+++ b/004.JS학습/JS3-1.제어문.html
@@ -395,7 +395,7 @@
                 // for문
                 // for(시;한;증){코드}
                 for (var i = 1; i < 10; i++) {
-                    console.log("ㅎㅎㅎ", i);
+                    // console.log("ㅎㅎㅎ", i);
                     hcode += `${opt} × ${i} ＝ ${opt * i}<br>`;
                 } //////// for문 ///////////
 
@@ -609,7 +609,7 @@
         <h2>for문 연습</h2>
         <h3>구구단 출력하기</h3>
         <select name="sel" id="sel" onchange="gugu(this)">
-        <!-- 함수에 this라고 보내면 요소자신을 함수에 전송한다 -->
+            <!-- 함수에 this라고 보내면 요소자신을 함수에 전송한다 -->
             <option value="1">구구단을 선택하세요!</option>
             <option value="2">2단</option>
             <option value="3">3단</option>
@@ -640,7 +640,7 @@
         <h2>while문 연습</h2>
         <h3>구구단 출력하기</h3>
         <select name="sel2" id="sel2" onchange="gugu2(this)">
-        <!-- 함수에 this라고 보내면 요소자신을 함수에 전송한다 -->
+            <!-- 함수에 this라고 보내면 요소자신을 함수에 전송한다 -->
             <option value="1">구구단을 선택하세요!</option>
             <option value="2">2단</option>
             <option value="3">3단</option>
