--- a/004.JS학습/JS3-1.제어문.html
+++ b/004.JS학습/JS3-1.제어문.html
@@ -78,7 +78,7 @@
 
                 /*************************************** 
                     [  빈값/숫자여부/숫자범위 판별  ]
-                    -> ish Not a Number? -> isNaN()
+                    -> is Not a Number? -> isNaN()
                     -> 숫자가 아니니? 판별 내장함수는?
                     isNaN(변수)
                     -> 숫자가 아니면 true, 숫자면 false
