--- a/004.JS학습/JS연습.html
+++ b/004.JS학습/JS연습.html
@@ -23,7 +23,12 @@
             let initFn = function (txt){
                 // 0. 함수호출
                 console.log("초기화해야지!");
-            }
+                // 1. 평가출력에 내용 출력하기
+                jexp.innerText = txt;
+                // 2. 글자색 초기화 : jexp
+                jexp.style.color = "#000";
+            } //////////////// intiFn 함수 /////////////
+            
 
         }//////////////////// jumsu 함수/////////////////////////
     </script>
