--- a/700.쉐도잉프로젝트/01.DKB_PJ/02.구현소스/index.html
+++ b/700.쉐도잉프로젝트/01.DKB_PJ/02.구현소스/index.html
@@ -17,13 +17,16 @@
         <title>도깨비PJ - 메인페이지</title>
         <!-- 외부css불러오기(main.css만) -->
         <link rel="stylesheet" href="./css/main.css" />
+        <!-- 애니메이션 css불러오기 -->
+        <link rel="stylesheet" href="./css/ani.css">
         <!-- 미디어쿼리 불러오기 : 메인 아래 있어야함-->
         <link rel="stylesheet" href="./css/media.css">
         <!-- 외부JS 불러오기 -->
         <script src="./js/common.js" defer></script>
         <!-- defer 는 html코드를 모두 로딩후 실행하는 속성임 -->
     </head>
-    <body>
+    <!-- body에 클래스 "on"적용시 애니작동 -->
+    <body class="scbar">
         <!-- 1. 상단영역 -->
         <div id="top">
             <header class="top ibx">
