--- a/004.JS학습/JS3-2.if문연습.html
+++ b/004.JS학습/JS3-2.if문연습.html
@@ -131,7 +131,7 @@
                 // 주로 어떤 변수나 메서드의 코드를 저장할 때 사용됨!
 
                 // [2] addEventListener() 내장함수 사용하여 연결
-                // 위의 경우와 같은 이유로 전달값이 있는 경우 익명함수를 사용하여 함수루역을 표현한다!
+                // 위의 경우와 같은 이유로 전달값이 있는 경우 익명함수를 사용하여 함수구역을 표현한다!
                 // btns.item(2).addEventListener("click", function () {
                 //     chgImg("넌,누구냐?");
                 // });
