--- a/001.HTML학습/02.Drama_PJ/dramaTable.html
+++ b/001.HTML학습/02.Drama_PJ/dramaTable.html
@@ -123,13 +123,44 @@
                     </td>
                     <!-- 
                         [  테이블 colspan 속성  ]
-                        - 같은 tr의 td셀을 합칠 때 쓴다!
+                        - 같은 tr의 td셀을 가로방향으로 합칠 때 쓴다!
                         - column 컬럼(기둥) + span(범위)
                         - 합칠 td의 개수만큼 숫자를 쓴다!
                      -->
                 </tr>
             </tfoot>
         </table>
+
+        <!-- 구분테이블 박스 -->
+        <div class="gubun">
+            <table class="tbl" id="gubun">
+                <tbody>
+                    <tr>
+                        <td rowspan="4">구분</td>
+                        <td>월화:월화드라마</td>
+                        <!--
+                            [  테이블 rowspan 속성  ]
+                            - 같은 tr의 td셀을 세로방향로 합칠 때 쓴다!
+                            - row 가로줄 + span(범위)
+                            - 합칠 td의 개수만큼 숫자를 쓴다!
+                         -->
+                    </tr>
+                    <tr>
+                        <!-- <td>구분</td> -->
+                        <td>수목:수목드라마</td>
+                    </tr>
+                    <tr>
+                        <!-- <td>구분</td> -->
+                        <td>금토:금토드라마</td>
+                    </tr>
+                    <tr>
+                        <!-- <td>구분</td> -->
+                        <td>토일:토일드라마</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+
         <!-- 
             [ 가장 복잡한 그룹요소인 테이블!!! ]
             1. table : 테이블 전체 부모요소
