--- a/004.JS학습/JS3-4.for문연습.html
+++ b/004.JS학습/JS3-4.for문연습.html
@@ -34,35 +34,108 @@
         <!-- JS코드구역 -->
         <script>
             // html모두 로딩 후 실행구역 ////////////
-            window.addEventListener("DOMContentLoaded",loadFn);
+            window.addEventListener("DOMContentLoaded", loadFn);
             // 로드이벤트 : load / DONContentLoaded
 
             /**********************************************
                 함수명 : loadFn
                 기능 : 로딩 후 바로 실행하는 코드
             **********************************************/
-            function loadFn(){
+            function loadFn() {
                 // 1.로딩함수 호출확인
                 console.log("로딩완료!");
+
+
                 // 2. 대상선정
                 // 2-1. 이벤트 대상: .mini
                 var mini = document.querySelectorAll(".mini");
-                console.log(mini);
-            }//////////////// loadFn 함수 /////////////////
+                // 2-2. 변경 대상: .Bcase
+                var Bcase = document.querySelector(".Bcase");
+                // console.log(mini,Bcase);
+
+                // 2-3. 리셋버튼 : .rbtn
+                var rbtn = document.querySelector(".rbtn");
+                console.log("reset");
+
+
+                // 3. 이벤트 셋팅하기//////////////////////
+                // 이벤트 종류 : click
+                // for문으로 버튼개수만큼 돌아서 셋팅하기!
+                // for(시;한;증){코드}
+                for (var i = 0; i < mini.length; i++) {
+                    // 반복조건: 0부터 시작
+                    // mini개수보다 작을 동안 1씩증가하면서 돈다
+                    // console.log("돌아!", i);
+
+                    // 1. 미니언즈 이미지마다 클릭설정하기
+                    mini[i].onclick = function () {
+                        // 1. 클릭된 이미지의 data-cnt값 읽어오기
+                        var cnt = this.getAttribute("data-cnt");
+                        // alert("나는 몇개? "+cnt);
+                        /* attribute(속성명) -> 속성값 읽어오기 */
+
+                        // 2. 파란상자에 미니언즈 넣기
+                        // += 대입연산자로 기존데이터에 더함!
+                        // for문으로 반복개수만큼 미니언즈 넣기!
+                        // for(시;한;증){코드}
+                        for (var j = 0; j < cnt; j++) {
+                            Bcase.innerHTML += `<img src="./images/Minions.png" alt="미니언즈">`;
+                        } /////////// for문 ////////////////
+                    }; ///////// click 이벤트 함수 ////////
+                    // mini.item(순번)
+                    // mini[순번]
+                } /////////// for문 /////////////////
+
+
+                // 4.리셋버튼 셋팅하기
+                // 대상 : 이벤트 대상 - rbtn / 변경대상 - Bcase
+                // 변경내용 : Bcase의 내용지우기
+                rbtn.onclick = function () {
+                    // 1.호출확인
+                    console.log("다지워");
+                    // 2.파란상자내용 지우기
+                    Bcase.innerHTML = "";
+                }; //////////// click 이벤트 함수//////////
+
+                // 리셋버튼 디자인변경
+                rbtn.style.fontSize = "40px";
+                rbtn.style.margin = "10px";
+
+            } //////////////// loadFn 함수 /////////////////
         </script>
     </head>
 
     <body>
         <h1>for문 연습1 - 파란상자에 미니언즈 집어넣기</h1>
-        <img src="./images/Minions.png" alt="미니언즈" class="mini" title="나를 클릭하면 한개씩 가방에 들어갈꼬얌~!" />
+        <!-- data-cnt는 각 미니언즈를 몇개씩 넣을지에 대한 정보값임 -->
+        <img
+            src="./images/Minions.png"
+            alt="미니언즈"
+            class="mini"
+            title="나를 클릭하면 한개씩 가방에 들어갈꼬얌~!"
+            data-cnt="1"
+        />
         <img
             src="./images/Minions.png"
             alt="미니언즈"
             class="mini"
             title="나를 클릭하면 다섯개씩 가방에 들어갈꼬얌~!"
+            data-cnt="5"
         />
-        <img src="./images/Minions.png" alt="미니언즈" class="mini" title="나를 클릭하면 열개씩 가방에 들어갈꼬얌~!" />
+        <img
+            src="./images/Minions.png"
+            alt="미니언즈"
+            class="mini"
+            title="나를 클릭하면 열개씩 가방에 들어갈꼬얌~!"
+            data-cnt="10"
+        />
 
+        <!-- 
+            [ 데이터를 저장하기위한 속성사용하기 ]
+            개발자가 임의로 만들 수 있는 속성은 시작할 때 data-로 쓴다!
+            형식 :
+            <요소 data-내가만든이름 ="값">
+        -->
         <!-- 리셋을 한다면 이렇게...! -->
         <button class="rbtn">리셋</button>
 
