--- a/004.JS학습/JS3-4.for문연습.html
+++ b/004.JS학습/JS3-4.for문연습.html
@@ -45,7 +45,6 @@
                 // 1.로딩함수 호출확인
                 console.log("로딩완료!");
 
-
                 // 2. 대상선정
                 // 2-1. 이벤트 대상: .mini
                 var mini = document.querySelectorAll(".mini");
@@ -55,8 +54,9 @@
 
                 // 2-3. 리셋버튼 : .rbtn
                 var rbtn = document.querySelector(".rbtn");
-                console.log("reset");
 
+                // 2-4. 전체개수표시 : .stxt span
+                var stxt = document.querySelector(".stxt span");
 
                 // 3. 이벤트 셋팅하기//////////////////////
                 // 이벤트 종류 : click
@@ -69,10 +69,14 @@
 
                     // 1. 미니언즈 이미지마다 클릭설정하기
                     mini[i].onclick = function () {
+                        // 바깥for문의 i는 최종결과의 값만 내부에 찍힘
+                        // i값이 하나씩 전달되지 않는다!(참고로 알아둘것!) console.log("for문변수:",i);
+
                         // 1. 클릭된 이미지의 data-cnt값 읽어오기
                         var cnt = this.getAttribute("data-cnt");
+                        // this키워드 : 이벤트설정된 요소 자신!!
+                        // attribute(속성명) -> 속성값 읽어오기
                         // alert("나는 몇개? "+cnt);
-                        /* attribute(속성명) -> 속성값 읽어오기 */
 
                         // 2. 파란상자에 미니언즈 넣기
                         // += 대입연산자로 기존데이터에 더함!
@@ -81,11 +85,14 @@
                         for (var j = 0; j < cnt; j++) {
                             Bcase.innerHTML += `<img src="./images/Minions.png" alt="미니언즈">`;
                         } /////////// for문 ////////////////
+
+                        // 3. for문으로 미니언즈를 모두 추가후
+                        // 현재 개수 표시 함수 호출 !!!
+                        showCnt();
                     }; ///////// click 이벤트 함수 ////////
                     // mini.item(순번)
                     // mini[순번]
                 } /////////// for문 /////////////////
-
 
                 // 4.리셋버튼 셋팅하기
                 // 대상 : 이벤트 대상 - rbtn / 변경대상 - Bcase
@@ -95,12 +102,27 @@
                     console.log("다지워");
                     // 2.파란상자내용 지우기
                     Bcase.innerHTML = "";
+                    // 3. 개수표시 초기화
+                    stxt.innerText = "0";
                 }; //////////// click 이벤트 함수//////////
 
                 // 리셋버튼 디자인변경
                 rbtn.style.fontSize = "40px";
                 rbtn.style.margin = "10px";
 
+                // 5. 현재 미니언즈 개수 표시하기
+                // 대상 : .stxt span
+                // 할당형 함수를 만들어서 미니언즈를 추가할 때마다
+                // 이 함수를 호출하게 한다!
+                var showCnt = function () {
+                    // 1. 호출확인
+                    console.log("지금 몇개?");
+                    // 2. 파란상자안의 미니언즈 이미지개수 읽어오기
+                    var cnt = Bcase.querySelectorAll("img").length;
+                    // 3. 표시요소에 개수 출력하기 : .stxt span ->stxt
+                    stxt.innerText = cnt;
+                }; ////////// showCnt 함수 /////////////////
+                
             } //////////////// loadFn 함수 /////////////////
         </script>
     </head>
@@ -136,6 +158,10 @@
             형식 :
             <요소 data-내가만든이름 ="값">
         -->
+
+        <!-- 현재 미니언즈 개수표시 -->
+        <h2 class="stxt">현재 미니언즈 그룹개수는 : <span>0</span>개</h2>
+
         <!-- 리셋을 한다면 이렇게...! -->
         <button class="rbtn">리셋</button>
 
