--- a/(연습)apple.html
+++ b/(연습)apple.html
@@ -13,12 +13,29 @@
             color: #fff;
         }
         .header{
+            position: relative;
             display: flex;
             justify-content: space-between;
         }
-        nav{
-            display: flex;
+        .header_left{
+            position: relative;
+            width: 25vw;
+        }
+        :root{
+            --logo_size: 14px;
+        }
 
+        .logo img{
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translateY(-50%);
+        }
+        .header_main{
+            display: flex;
+            width: 50vw;
+            padding-top: 5px;
+            
         }
 
         nav a{
@@ -26,45 +43,57 @@
             color: #fff;
             margin-left: 50px;
         }
-        .icon{
+        .header_right{
+            /* position: absolute;
             display: flex;
+            width: 25vw; */
+        }
+        .search img{
+            position: absolute;
+            top: 50%;
         }
         .pg1 video{
             width: 100%;
-            height: 100%;
+            opacity: 0.5;
         }
     </style>
 </head>
 <body>
     <div class="header">
-        <div class="logo">
-            <a href="#"><img src="./007.프로토타이핑/Balsamiq_Mockups_3/apple/apple_image.svg" alt="애플로고"></a>
+        <div class="header_left">
+            <div class="logo">
+                <a href="#"><img src="./007.프로토타이핑/Balsamiq_Mockups_3/apple/apple_image.svg" alt="애플로고"></a>
+            </div>
         </div>
         <nav>
-            <a href="#">
-                <h2>PRODUCT</h2>
-            </a>
-            <a href="#">
-                <h2>PURCHASE</h2>
-            </a>
-            <a href="#">
-                <h2>HELP</h2>
-            </a>
+            <div class="header_main">
+                <a href="#">
+                    <h2>PRODUCT</h2>
+                </a>
+                <a href="#">
+                    <h2>PURCHASE</h2>
+                </a>
+                <a href="#">
+                    <h2>HELP</h2>
+                </a>
+            </div>
         </nav>
         <div class="icon">
-            <div class="search">
-                <img src="./007.프로토타이핑/Balsamiq_Mockups_3/apple/globalnav_search_image__cbllq1gkias2_large.svg" alt="서치아이콘">
-            </div>
-            <div class="bag">
-                <a href="#">
-                    <img src="./007.프로토타이핑/Balsamiq_Mockups_3/apple/globalnav_bag_image__yzte50i47ciu_large.svg" alt="장바구니아이콘">
-                </a>
+            <div class="header_right">
+                <div class="search">
+                    <img src="./007.프로토타이핑/Balsamiq_Mockups_3/apple/globalnav_search_image__cbllq1gkias2_large.svg" alt="서치아이콘">
+                </div>
+                <div class="bag">
+                    <a href="#">
+                        <img src="./007.프로토타이핑/Balsamiq_Mockups_3/apple/globalnav_bag_image__yzte50i47ciu_large.svg" alt="장바구니아이콘">
+                    </a>
+                </div>
             </div>
         </div>
     </div>
     <div class="main">
         <div class="page pg1">
-            <video src="./007.프로토타이핑/Balsamiq_Mockups_3/iPhone 14 Pro(배경동영상).mp4"></video>
+            <video src="./007.프로토타이핑/Balsamiq_Mockups_3/iPhone 14 Pro(배경동영상).mp4" muted autoplay loop></video>
         </div>
         <div class="page pg2"></div>
         <div class="page pg3"></div>
