--- a/(연습)apple.html
+++ b/(연습)apple.html
@@ -5,22 +5,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>애플연습</title>
     <style>
-        html,body{
+        /* 전체 초기화 */
+        html,body,h2{
             margin: 0;
             padding: 0;
             outline: 1px dotted yellow;
             background-color: #000;
             color: #fff;
         }
+
+        /*********************** header부분 ***********************/
         .header{
-            position: relative;
+            position: fixed;
             display: flex;
             justify-content: space-between;
+            background: #000;
+            height: 5vh;
         }
         .header_left{
             position: relative;
             width: 25vw;
         }
+        .header_main{
+            width: 50vw;
+        }
+        .header_right{
+            width: 25vw;
+        }
+
         :root{
             --logo_size: 14px;
         }
@@ -31,31 +43,43 @@
             left: 50%;
             transform: translateY(-50%);
         }
-        .header_main{
+        nav{
             display: flex;
-            width: 50vw;
-            padding-top: 5px;
-            
+            justify-content: space-around;
         }
 
         nav a{
             text-decoration: none;
             color: #fff;
-            margin-left: 50px;
         }
-        .header_right{
-            /* position: absolute;
+
+        .icon{
+            position: relative;
             display: flex;
-            width: 25vw; */
         }
-        .search img{
+        .search {
             position: absolute;
-            top: 50%;
+            top: -47px;
+            right: 274px;
         }
+        .bag {
+        position: absolute;
+        top: -3px;
+        right: 130px;
+        }
+
+        /****************************** 1페이지 ******************************/
         .pg1 video{
+            margin-top: 37px;
             width: 100%;
-            opacity: 0.5;
         }
+
+
+        /****************************** 2페이지 ******************************/
+        .pg2{
+            background: url(./007.프로토타이핑/Balsamiq_Mockups_3/apple/background.png) no-repeat center/cover;
+        }
+
     </style>
 </head>
 <body>
@@ -65,8 +89,8 @@
                 <a href="#"><img src="./007.프로토타이핑/Balsamiq_Mockups_3/apple/apple_image.svg" alt="애플로고"></a>
             </div>
         </div>
-        <nav>
-            <div class="header_main">
+        <div class="header_main">
+            <nav>
                 <a href="#">
                     <h2>PRODUCT</h2>
                 </a>
@@ -76,12 +100,14 @@
                 <a href="#">
                     <h2>HELP</h2>
                 </a>
-            </div>
-        </nav>
-        <div class="icon">
-            <div class="header_right">
+            </nav>
+        </div>
+        <div class="header_right">
+            <div class="icon">
                 <div class="search">
-                    <img src="./007.프로토타이핑/Balsamiq_Mockups_3/apple/globalnav_search_image__cbllq1gkias2_large.svg" alt="서치아이콘">
+                    <a href="#">
+                        <img src="./007.프로토타이핑/Balsamiq_Mockups_3/apple/globalnav_search_image__cbllq1gkias2_large.svg" alt="서치아이콘">
+                    </a>
                 </div>
                 <div class="bag">
                     <a href="#">
@@ -95,7 +121,17 @@
         <div class="page pg1">
             <video src="./007.프로토타이핑/Balsamiq_Mockups_3/iPhone 14 Pro(배경동영상).mp4" muted autoplay loop></video>
         </div>
-        <div class="page pg2"></div>
+        <div class="page pg2">
+            <h1>
+                Pro.<br>
+                Beyond.
+            </h1>
+            <h3>
+                iPhone 14 Pro and iPhone 14 Pro Max <br>
+                From $41.62/mo. for 24 mo. or $999 before trade-in*
+            </h3>
+            
+        </div>
         <div class="page pg3"></div>
         <div class="page pg4"></div>
         <div class="page pg5"></div>
