--- a/(연습)apple.html
+++ b/(연습)apple.html
@@ -6,7 +6,7 @@
     <title>애플연습</title>
     <style>
         /* 전체 초기화 */
-        html,body,h2{
+        html,body,h1,h2,h3,.page{
             margin: 0;
             padding: 0;
             outline: 1px dotted yellow;
@@ -15,8 +15,10 @@
         }
 
         /*********************** header부분 ***********************/
+        
         .header{
             position: fixed;
+            z-index: 999;
             display: flex;
             justify-content: space-between;
             background: #000;
@@ -77,7 +79,28 @@
 
         /****************************** 2페이지 ******************************/
         .pg2{
-            background: url(./007.프로토타이핑/Balsamiq_Mockups_3/apple/background.png) no-repeat center/cover;
+            position: relative;
+        }
+        .pg2 img{
+            position: relative;
+            width: 100%;
+        }
+        .pg2 h1{
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            font: bold 10vw sans-serif;
+            background: none;
+            color: #000;
+        }
+        .pg2 h3{
+            position: absolute;
+            top: 69.5%;
+            left: 49.6%;
+            transform: translateX(-50%);
+            background: none;
+            color: #000;
         }
 
     </style>
@@ -122,6 +145,7 @@
             <video src="./007.프로토타이핑/Balsamiq_Mockups_3/iPhone 14 Pro(배경동영상).mp4" muted autoplay loop></video>
         </div>
         <div class="page pg2">
+            <img src="./007.프로토타이핑/Balsamiq_Mockups_3/apple/background.png" alt="2페이지 배경화면">
             <h1>
                 Pro.<br>
                 Beyond.
