--- a/700.쉐도잉프로젝트/01.DKB_PJ/02.구현소스/index.html
+++ b/700.쉐도잉프로젝트/01.DKB_PJ/02.구현소스/index.html
@@ -24,9 +24,11 @@
         <!-- 외부JS 불러오기 -->
         <script src="./js/common.js" defer></script>
         <!-- defer 는 html코드를 모두 로딩후 실행하는 속성임 -->
+        <!-- 링크 시스템 JS -->
+        <script src="./js/linksys.js"></script>
     </head>
     <!-- body에 클래스 "on"적용시 애니작동 -->
-    <body class="scbar">
+    <body class="scbar on">
         <!-- 1. 상단영역 -->
         <div id="top">
             <header class="top ibx">
