--- a/004.JS학습/JS5-1.함수.html
+++ b/004.JS학습/JS5-1.함수.html
@@ -65,7 +65,7 @@
                 호출코드:
                 Fn("고양이","강아지","사람");
 
-            2. 함수를 나오기 전에 return  키워드를 쓰고 그 뒤에 
+            2. 함수가 나오기 전에 return  키워드를 쓰고 그 뒤에 
                 값을 담은 변수나 어떤값을 쓰면 함수를 호출한 곳으로
                 돌아올때 이 값을 가지고 돌아간다!
                 (리턴값을 사용안 할 수도 있는 옵션이다!)
@@ -83,7 +83,7 @@
             5. 전역변수, 지역변수
 
                 (1) 전역변수(Global Variable) 는 함수바깥쪽에 선언한
-                변수다. 따라서 모든 다른 함수에서 이 변수를 참조할 수 있다.
+                    변수다. 따라서 모든 다른 함수에서 이 변수를 참조할 수 있다.
 
                 (2) 지역변수(Local Variable) 는 함수 내부에서 선언하거나
                     파라미터변수를 말한다. 함수 외부나 다른 함수에서 이를
@@ -125,7 +125,7 @@
             - 익명함수를 쓰는 이유 장점 :
 
             (1) 함수코드가 미리 로딩되지 않기 때문에 메모리 부담이
-            적고 소스 로딩속도가 빠르다!
+                적고 소스 로딩속도가 빠르다!
 
             (2) 바로 실행하면 안되는 코드를 직접 저장할 수 있다!
 
