--- a/004.JS학습/JS3-6.1.for_of문.html
+++ b/004.JS학습/JS3-6.1.for_of문.html
@@ -44,9 +44,10 @@
 
                         같은 공간 다른 시간, 언젠가 마주쳤던 두 사람의 이야기.
                         우리는 모두 그 애를 만난 적이 있다.`];
-                       const mv7 = ["어쩌면 우린 헤어졌는지 모른다", 
-                       "이동휘,정은채", 
-                       `“헤어지자고 먼저 말한 건 너야”
+                       const mv7 = [
+                        "어쩌면 우린 헤어졌는지 모른다", 
+                        "이동휘,정은채", 
+                        `“헤어지자고 먼저 말한 건 너야”
                         “헤어지자고 말 꺼내게 한 사람이 너잖아”
                         이별을 처리하는 데 걸리는 시간은 얼마나 될까?
                         연락처의 애칭을 풀네임으로 바꾸면?
