--- a/002.CSS학습/05.3DAni/RollingCube.html
+++ b/002.CSS학습/05.3DAni/RollingCube.html
@@ -5,8 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rolling Cube 3D Animation</title>
     <link rel="stylesheet" href="./css/cube.css">
+    <!-- 외부JS호출 -->
+    <script src="./js/cube.js"></script>
 </head>
 <body>
+
+    <!-- 작동버튼 -->
+    <button class="btngo">돌아!</button>
+
     <!-- 큐브 -->
     <div class="cube cube-ani">
         <span></span>
