--- a/001.HTML학습/08.CubeTrip/index.html
+++ b/001.HTML학습/08.CubeTrip/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/media.css">
     <!-- 외부JS불러오기 -->
     <script src="js/data.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js/main copy.js"></script>
 </head>
 <body>
     
@@ -58,7 +58,7 @@
 <div class="cbx">
     <article class="ctxt">
         <!-- 도시이름 -->
-        <h2 class="cname">뉴욕</h2>
+        <h2 class="cname"></h2>
         <!-- 도시설명 -->
         <p class="cinfo scbar"></p>
     </article>
