--- a/001.HTML학습/08.CubeTrip/index.html
+++ b/001.HTML학습/08.CubeTrip/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/media.css">
     <!-- 외부JS불러오기 -->
     <script src="js/data.js"></script>
-    <script src="js/main copy.js"></script>
+    <script src="js/main.js"></script>
 </head>
 <body>
     
