--- a/004.JS학습/JS5-3.함수연습_갤러리.html
+++ b/004.JS학습/JS5-3.함수연습_갤러리.html
@@ -319,6 +319,29 @@
                 // 원리: 미리셋팅된 클래스를 미니언즈요소에
                 // 일정시간 후 넣고/빼고/넣기를 해준다!
                 // 변경대상: #mini
+
+                const mini = document.querySelector("#mini");
+                // console.log(mini);
+
+                // 2초 후 미니언즈 class "on1" 넣기
+                setTimeout(()=>{
+                    mini.classList.add("on1","바보야","멍멍아");
+                },2000); ///////////setTimeout///////////
+                // 4초 후 미니언즈 class "on1" 빼기
+                setTimeout(()=>{
+                    mini.classList.remove("on1","멍멍아");
+                },4000); ///////////setTimeout///////////
+                // 6초 후 미니언즈 class "on2" 넣기
+                setTimeout(()=>{
+                    mini.classList.toggle("on2");
+                },6000); ///////////setTimeout///////////
+                // 8초 후 미니언즈 class "on2"를 "on1"으로 바꾸기
+                setTimeout(()=>{
+                    mini.classList.replace("on2","on1");
+                },8000); ///////////setTimeout///////////
+
+
+            
             }); /////////// 로드구역 ///////////////////
         </script>
     </head>
